--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@
  * ------------------------------------------------------------------- 
  */
 @import url("fonts.css");
-@import url("font-awesome/css/font-awesome.min.css");
+@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 @import url("micons/micons.css");
 
 
@@ -2492,6 +2492,7 @@ header .logo a {
  */
 footer {
 	padding-bottom: 3rem;
+	padding-top: 3rem;
 	font-size: 1.4rem;
 	font-family: "poppins-regular", sans-serif;
 }
